 - Function "rev_index": convert an index into its complement
 - Function "values_to_steps": convert values to index of unique, sorted values
datamodel
 - Fix reading JSON-headed ASCII in numpy 1.4, 1.5
empiricals
 - New function getSolarRotation, returns Carrington or Bartels number
plot
 - Addition of dual_half_circle() to overlay a light/dark "Earth"
plot.utils
 - Fix collapse_vertical when called with sequences other than lists
pycdf
 - On OSX, search more paths for the CDF library
 - CDF.clone() now returns the new variable
 - Fix re-import after failure to find the CDF library, can now try the import
   again without restarting the Python intepreter
 - Fix some comparisons that might cause problems with future versions of numpy
 - Log the path to the CDF library for debugging purposes
 - Library.epoch_to_num: convert epoch to matplotlib date number (like date2num)
time
 - Speed improvement update to TickTock.getleapsecond
 - Overall speed improvements with for loop removal 
 - ISO improvements via special cases for string input
 - Added classmethod today()
python3 support
 -updates for python3 support, seems to be complete
AE9AP9
 - added ae9ap9 module to parse and work with output files from the AE9/AP9/SPM models

Changes in Version 0.1.5 (2014-12-23)
=====================================
- Python 3 support
- documentation updates across many packages
- installer should work better w/pip
- minor bugfixes throughout
datamodel
 - fromHDF5 now reads most netCDF4 and MatLab (v7.3+; r2011b onward) save files
 - add function dmfilled: create a filled dmarray with any given fill value
 - updates to toCDF to allow/use NRV variables
irbempy
 - add function find_footpoint: traces field line from given location to
   specified altitude
 - add functions find_LCDS and find_LCDS_K to find the last closed drift shell
   at given pitch angle or given second invariant K
 - add function AlphaOfK to find the equatorial pitch angle for a specified
   second invariant K
omni