@@ -1,0 +1,15 @@
+
+
+############################################################################
+spectrogram - Plot space physics spectrogram
+############################################################################
+
+.. automodule:: spacepy.plot.spectrogram
+
+.. currentmodule:: spacepy.plot.spectrogram
+
+.. autosummary::
+    :template: clean_module.rst
+    :toctree: autosummary
+
+    simpleSpectrogram
